fix: force nowrap in progress tooltips

--- a/src/sass/components/progress.scss
+++ b/src/sass/components/progress.scss
@@ -27,7 +27,6 @@ $plyr-progress-offset: $plyr-range-thumb-height;
     left: 0;
     max-width: 120px;
     overflow-wrap: break-word;
-    white-space: normal;
   }
 }
 
